# pyiron_dataclasses

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.ci_support/: environment-mini.yml  environment-old.yml  environment-pyiron-atomistics-0-6-0.yml  environment-pyiron-atomistics-0-6-1.yml  environment-pyiron-atomistics-0-6-10.yml  environment-pyiron-atomistics-0-6-11.yml  environment-pyiron-atomistics-0-6-12.yml  environment-pyiron-atomistics-0-6-13.yml  environment-pyiron-atomistics-0-6-2.yml  environment-pyiron-atomistics-0-6-20.yml  environment-pyiron-atomistics-0-6-21.yml  environment-pyiron-atomistics-0-6-22.yml  environment-pyiron-atomistics-0-6-23.yml  environment-pyiron-atomistics-0-6-24.yml  environment-pyiron-atomistics-0-6-25.yml  environment-pyiron-atomistics-0-6-3.yml  environment-pyiron-atomistics-0-6-4.yml  environment-pyiron-atomistics-0-6-5.yml  environment-pyiron-atomistics-0-6-6.yml  environment-pyiron-atomistics-0-6-7.yml  environment-pyiron-atomistics-0-6-8.yml  environment-pyiron-atomistics-0-6-9.yml  environment-pyiron-atomistics-0-7-0.yml  environment-pyiron-atomistics-0-7-1.yml  environment-pyiron-atomistics-0-7-10.yml  environment-pyiron-atomistics-0-7-11.yml  environment-pyiron-atomistics-0-7-12.yml  environment-pyiron-atomistics-0-7-13.yml  environment-pyiron-atomistics-0-7-14.yml  environment-pyiron-atomistics-0-7-15.yml  environment-pyiron-atomistics-0-7-16.yml  environment-pyiron-atomistics-0-7-17.yml  environment-pyiron-atomistics-0-7-18.yml  environment-pyiron-atomistics-0-7-19.yml  environment-pyiron-atomistics-0-7-2.yml  environment-pyiron-atomistics-0-7-20.yml  environment-pyiron-atomistics-0-7-3.yml  environment-pyiron-atomistics-0-7-4.yml  environment-pyiron-atomistics-0-7-5.yml  environment-pyiron-atomistics-0-7-6.yml  (+14 more)
.github/: dependabot.yml 
.github/workflows/: deploy.yml  integration.yml  minimal.yml  pipeline.yml  pyiron_atomistics_tests.yml  pyiron_atomistics_tests_0_6_0.yml  pyiron_atomistics_tests_0_6_1.yml  pyiron_atomistics_tests_0_6_10.yml  pyiron_atomistics_tests_0_6_11.yml  pyiron_atomistics_tests_0_6_12.yml  pyiron_atomistics_tests_0_6_13.yml  pyiron_atomistics_tests_0_6_2.yml  pyiron_atomistics_tests_0_6_20.yml  pyiron_atomistics_tests_0_6_21.yml  pyiron_atomistics_tests_0_6_3.yml  pyiron_atomistics_tests_0_6_4.yml  pyiron_atomistics_tests_0_6_5.yml  pyiron_atomistics_tests_0_6_6.yml  pyiron_atomistics_tests_0_6_7.yml  pyiron_atomistics_tests_0_6_8.yml  pyiron_atomistics_tests_0_6_9.yml  pypicheck.yml  unittests.yml
notebooks/: lammps.ipynb  sphinxdft.ipynb
pyiron_dataclasses/: __init__.py
pyiron_dataclasses/v1/: atomistic.py  converter.py  dft.py  generic.py  lammps.py  murn.py  sphinx.py  vasp.py
tests/: convert.py  test_pyiron_atomistics.py  test_pyiron_atomistics_live.py  test_pyiron_atomistics_static.py  test_shared.py
tests/pyiron_atomistics_0_6_13/: murn.h5  sx.h5  vasp.h5
tests/static/: sx.h5
