[build-system]
requires = ["setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_dataclasses"
description = "Dataclasses for the pyiron workflow framework"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy==2.2.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_dataclasses"
Documentation = "https://github.com/pyiron/pyiron_dataclasses"
Repository = "https://github.com/pyiron/pyiron_dataclasses"

[project.optional-dependencies]
convert = [
    "h5io_browser==0.1.9",
    "pint==0.24.4",
]

[tool.setuptools.packages.find]
include = ["pyiron_dataclasses*"]

[tool.setuptools.dynamic]
version = {attr = "pyiron_dataclasses.__version__"}

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_dataclasses/_version.py"
parentdir_prefix = "pyiron_dataclasses"
tag_prefix = "pyiron_dataclasses-"

[tool.coverage.run]
omit = ["pyiron_dataclasses/_version.py", "tests/*"]
command_line = "-m unittest discover tests"